infra/k8s/database/graphql/002-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgraphile
spec:
  type: ClusterIP
  selector:
    app: postgraphile 
  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - protocol: TCP
      port: 5000
      name: web
