infra/k8s/database/graphql/003-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: default
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Origin: "*"
      Access-Control-Allow-Headers: "Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With"
      Access-Control-Allow-Methods: "POST"
---
kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: fk-frontend-prod-graphql-https
  namespace: default
spec:
  entryPoints: 
    - websecure
  routes:
  - match: (Host(`frikanalen.no`) || Host(`www.frikanalen.no`) || Host(`forrige.frikanalen.no`)) && PathPrefix(`/graphql`)
    kind: Rule
    middlewares:
    - name: cors
      namespace: default
    services:
    - kind: Service
      name: postgraphile
      scheme: http
      port: 5000
  tls:
    certResolver: default
